# erlkoenig_bpf

./: .gitignore  LICENSE  Makefile  README.md  rebar.config
.claude/: settings.local.json
c_src/: CMakeLists.txt  Makefile  ubpf_maps.c  ubpf_maps.h  ubpf_port.c
docs/: CONTRIBUTING.md
dsl/: mix.exs
examples/: 01_hello_pass.ebl  02_arithmetic.ebl  03_conditionals.ebl  04_loops.ebl  05_nested_loops.ebl  06_match.ebl  07_context_access.ebl  08_structs.ebl  09_maps.ebl  10_rate_limiter.ebl  11_spill_stress.ebl  12_packet_parse.ebl  13_ip_blacklist.ebl  14_protocol_counter.ebl  15_syn_flood_protect.ebl  16_port_firewall.ebl  17_ttl_filter.ebl  18_icmp_rate_limiter.ebl  19_dns_amplification.ebl  20_subnet_firewall.ebl  21_port_scan_detect.ebl  22_bandwidth_monitor.ebl
include/: ebl_ast.hrl  ebpf_ir.hrl  ebpf_opcodes.hrl  ebpf_vm.hrl
scripts/: build_ubpf.sh
src/: ebl_compile.erl  ebl_error_format.erl  ebl_lexer.erl  ebl_parser.erl  ebl_pre_verify.erl  ebl_typecheck.erl  ebpf_codegen.erl  ebpf_ctx.erl  ebpf_debugger_web.erl  ebpf_disasm.erl  ebpf_insn.erl  ebpf_ir_format.erl  ebpf_ir_gen.erl  ebpf_peephole.erl  ebpf_regalloc.erl  ebpf_test_pkt.erl  ebpf_ubpf.erl  ebpf_vm.erl  ebpf_vm_alu.erl  ebpf_vm_debug.erl  ebpf_vm_decode.erl  ebpf_vm_helpers.erl  ebpf_vm_jmp.erl  ebpf_vm_maps.erl  ebpf_vm_mem.erl  erlkoenig_ebpf.app.src
test/: ebl_compile_test.erl  ebl_cross_validate_test.erl  ebl_integration_test.erl  ebl_lexer_test.erl  ebl_packet_test.erl  ebl_parser_test.erl  ebl_pre_verify_test.erl  ebl_prop_test.erl  ebl_prop_xval_test.erl  ebl_realworld2_test.erl  ebl_realworld_test.erl  ebl_stateful_xval_test.erl  ebl_typecheck_test.erl  ebl_ubpf_test.erl  ebpf_codegen_test.erl  ebpf_ctx_test.erl  ebpf_endian_test.erl  ebpf_insn_test.erl  ebpf_ir_gen_test.erl  (+5 more)
tui/: go.mod  (+1 more)
(+41 files in other folders)
